# ilias-native-ui

./: .gitignore  README.md  package.json
.github/workflows/: publish.yml
public/: index.html
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs
src-tauri/src/ilias/: api.rs  mod.rs  tree.rs
src/components/: AppBar.vue  DarkModeButton.vue  FileTree.vue  Login.vue  SyncButton.vue
src/router/: index.js
src/store/: index.js
src/views/: Home.vue  Init.vue
