[package]
name = "ilias-native-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "ilias-native-ui"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["api-all", "menu"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.5"
async-recursion = "0.3.2"
scraper = { version = "0.12.0" }
urlencoding = { version = "1.1.1" }
lazy_static = "1.4.0"
dirs = "1.0.5"
regex = "1"
uuid = { version = "0.8.2", features = ["v4"] }
open = "1.7.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
